# egret

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  egret.py  noxfile.py  pyproject.toml
.github/workflows/: test.yml
src/: egret.py  grist.py
tests/: cli_test.py  collect_test.py  config_test.py  formatter_test.py  process_test.py  selector_test.py
